// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matrix.fromRows 1`] = `
"-------------
1.000 | 2.000
3.000 | 4.000
5.000 | 6.000
-------------"
`;

exports[`Matrix.fromRows 2`] = `
"-----
7.000
8.000
9.000
-----"
`;

exports[`Matrix.fromRows 3`] = `
"---------------------------------
 1.000 | -2.000 |  3.000 |  4.000
-5.000 | -6.000 |  7.000 | -8.000
---------------------------------"
`;

exports[`Matrix.zeros 1`] = `
"-----
0.000
0.000
0.000
0.000
0.000
0.000
-----"
`;

exports[`Matrix.zeros 2`] = `
"---------------------
0.000 | 0.000 | 0.000
0.000 | 0.000 | 0.000
---------------------"
`;
